<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Magarec</string>
    <string name="magarec">MAGAREC</string>
    <string name="title_activity_game_window">GameWindow</string>
    <string name="game_logo_desc"></string>
    <string name="newgame">NEW</string>
    <string name="howto">HOW TO PLAY</string>
    <string name="about">ABOUT</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_how_to">HowToActivity</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="action_settings">Settings</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="cont">Continue</string>
    <string name="tap">Tap Fast!</string>
    <string name="title_activity_player_time">PlayerTimeActivity</string>
    <string name="title_activity_choose_game">ChooseGameActivity</string>
	<string name="singleplayer">Single Player</string>
	<string name="multiplayer">Multi Player</string>
</resources>
