<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.finki.timska.magarec.GameWindow" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" >
		
        <TextView
            android:id="@+id/start_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="30dp"
            android:keepScreenOn="true"
            android:shadowColor="@android:color/black"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="25"
            android:text="@string/magarec"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/game_logo"
            android:layout_width="250dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:contentDescription="@string/game_logo_desc"
            android:src="@drawable/start_screen" />
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using android:fitsSystemWindows. -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/new_game_btn"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="newGame"
                android:text="@string/newgame" />

            <Button
                android:id="@+id/howto_btn"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="viewHowTo"
                android:text="@string/howto" />

            <Button
                android:id="@+id/about_btn"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="viewAbout"
                android:text="@string/about" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>