<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.finki.timska.magarec.NewGameActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/player1"
        android:textColor="#ff0000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/player2"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/player3"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/player4"
        android:textColor="#fff"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:paddingTop="20dp" >

        <ImageView
            android:id="@+id/imageView01"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginRight="5dp"
            android:adjustViewBounds="true" />

        <ImageView
            android:id="@+id/imageView02"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginRight="5dp"
            android:adjustViewBounds="true" />

        <ImageView
            android:id="@+id/imageView03"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginRight="5dp"
            android:adjustViewBounds="true" />

        <ImageView
            android:id="@+id/imageView04"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginRight="5dp"
            android:adjustViewBounds="true" />

        <ImageView
            android:id="@+id/imageView05"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginRight="5dp"
            android:adjustViewBounds="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"
        android:layout_marginBottom="-40dp"
        android:layout_marginRight="-40dp"
        android:scaleX="0.65"
        android:scaleY="0.65" >

        <ImageView
            android:id="@+id/imageViewP2C1"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginLeft="-20dp"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:background="@drawable/cardback_red2" />

        <ImageView
            android:id="@+id/imageViewP2C2"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginLeft="-20dp"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:background="@drawable/cardback_red2" />

        <ImageView
            android:id="@+id/imageViewP2C3"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginLeft="-20dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:background="@drawable/cardback_red2" />

        <ImageView
            android:id="@+id/imageViewP2C4"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginLeft="-20dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:background="@drawable/cardback_red2" />

        <ImageView
            android:id="@+id/imageViewP2C5"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginLeft="-20dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:background="@drawable/cardback_red2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingBottom="30dp"
        android:paddingRight="20dp"
        android:layout_marginTop="-30dp"
        android:layout_marginRight="-40dp"
        android:scaleX="0.65"
        android:scaleY="0.65" >

        <ImageView
            android:id="@+id/imageViewP3C1"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginRight="-20dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:background="@drawable/cardback_green2" />

        <ImageView
            android:id="@+id/imageViewP3C2"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginRight="-20dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:background="@drawable/cardback_green2" />

        <ImageView
            android:id="@+id/imageViewP3C3"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginRight="-20dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:background="@drawable/cardback_green2" />

        <ImageView
            android:id="@+id/imageViewP3C4"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginRight="-20dp"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:background="@drawable/cardback_green2" />

        <ImageView
            android:id="@+id/imageViewP3C5"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginRight="-20dp"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:background="@drawable/cardback_green2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingBottom="30dp"
        android:paddingRight="20dp"
        android:layout_marginTop="-30dp"
        android:layout_marginLeft="-40dp"
        android:scaleX="0.65"
        android:scaleY="0.65" >

        <ImageView
            android:id="@+id/imageViewP4C1"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginRight="-20dp"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:background="@drawable/cardback_blue2" />

        <ImageView
            android:id="@+id/imageViewP4C2"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginRight="-20dp"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:background="@drawable/cardback_blue2" />

        <ImageView
            android:id="@+id/imageViewP4C3"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginRight="-20dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:background="@drawable/cardback_blue2" />

        <ImageView
            android:id="@+id/imageViewP4C4"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginRight="-20dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:background="@drawable/cardback_blue2" />

        <ImageView
            android:id="@+id/imageViewP4C5"
            android:layout_width="@dimen/normal_card_width"
            android:layout_height="@dimen/normal_card_height"
            android:layout_marginRight="-20dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:background="@drawable/cardback_blue2" />
    </LinearLayout>


</RelativeLayout>